--- a/build.gradle
+++ b/build.gradle
@@ -783,12 +783,20 @@ task compdb(type: Copy) {
 
 if (project.hasProperty("anotherDistro")) {
     targetList.each { targetName ->
-        task "${targetName}CheckAbiCompatibility"(type: CompareDistributionSignatures) {
+        task "check${targetName}PlatformAbiCompatibility"(type: CompareDistributionSignatures) {
             dependsOn "${targetName}PlatformLibs"
 
-            target = targetName
+            libraries = CompareDistributionSignatures.Libraries.Platform(targetName)
             oldDistribution = project.findProperty("anotherDistro")
             onMismatchMode = CompareDistributionSignatures.OnMismatchMode.FAIL
         }
+    }
+
+    task "checkStdlibAbiCompatibility"(type: CompareDistributionSignatures) {
+        dependsOn "${targetName}CrossDistRuntime"
+
+        libraries = CompareDistributionSignatures.Libraries.Standard()
+        oldDistribution = project.findProperty("anotherDistro")
+        onMismatchMode = CompareDistributionSignatures.OnMismatchMode.FAIL
     }
 }
